deploy/overlays/local/node-envida/components/ehrbase-gateway/ehrbase-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envida-ehrbase-gateway
  namespace: dh-health
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: ehrbase.envida.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envida-ehrbase-route
  namespace: dh-health
spec:
  parentRefs:
    - name: envida-ehrbase-gateway
  hostnames:
    - ehrbase.envida.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: envida-ehrbase
          port: 8080
